feat: adding new version to use others ean
